# TestGuru-COURSE_WORK-

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.a1a3f0f  TestButton.cpp  TestButton.h  TestGuru.cpp  TestGuru.h  TestGuru.pro  TestGuru.sqlite3  TestGuru.ui  answer.cpp  answer.h  development.sqlite3  main.cpp  qdynamicbutton.cpp  qdynamicbutton.h  question.cpp  question.h  signup.cpp  signup.h  signup.ui  testpassage.cpp  testpassage.h  user.cpp  user.h
